--- a/Aplicacion/tienda-app/src/app/components/card-data/card-data.component.html
+++ b/Aplicacion/tienda-app/src/app/components/card-data/card-data.component.html
@@ -1,5 +1,11 @@
 <ion-item *ngIf="data" [routerLink]="'/client/' + data.id" [detail]="false">
-  <ion-label class="ion-text-wrap">
-      {{ data.fromName }}
+  <ion-label class="ion-text-wrap" *ngIf="data">
+      {{ data.name }}
   </ion-label>
-  </ion-item>
+</ion-item>
+
+<ion-item *ngIf="invoice" [detail]="false">
+  <ion-label class="ion-text-wrap">
+      {{ invoice.date }}
+  </ion-label>
+</ion-item>
