--- a/Aplicacion/tienda-app/src/app/components/card-data/card-data.component.html
+++ b/Aplicacion/tienda-app/src/app/components/card-data/card-data.component.html
@@ -1,4 +1,5 @@
 <ion-item *ngIf="data" [routerLink]="'/client/' + data.id" [detail]="false">
+  <ion-icon name="person-circle-outline"></ion-icon>
   <ion-label class="ion-text-wrap" *ngIf="data">
       {{ data.name }}
   </ion-label>
@@ -8,4 +9,18 @@
   <ion-label class="ion-text-wrap">
       {{ invoice.date }}
   </ion-label>
+
+  <!--<ion-accordion-group>
+    <ion-accordion>
+      <ion-item slot="header">
+        <ion-label class="ion-text-wrap"></ion-label>
+
+        <ion-list slot="content">
+          <ion-item>
+            <ion-label>{{ invoice.date }} </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-item>
+    </ion-accordion>
+  </ion-accordion-group> -->
 </ion-item>
