--- a/Aplicacion/tienda-app/src/app/components/card-data/card-data.component.scss
+++ b/Aplicacion/tienda-app/src/app/components/card-data/card-data.component.scss
@@ -1,9 +1,14 @@
 ion-item {
   --padding-start: 10px;
   --inner-padding-end: 10px;
+  padding: 0.2em;
 }
 
 ion-label {
   margin-top: 12px;
   margin-bottom: 12px;
+}
+
+ion-icon {
+  padding-right: 0.5em;
 }
