--- a/Aplicacion/tienda-app/src/app/detail-client/detail-client.page.html
+++ b/Aplicacion/tienda-app/src/app/detail-client/detail-client.page.html
@@ -8,6 +8,38 @@
 
 <ion-content [fullscreen]="true" *ngIf="data">
   <ion-list>
-    <app-card-data *ngFor="let invoice of data.invoice"[invoice]="invoice"></app-card-data>
+    <ion-accordion-group *ngFor="let invoice of data.invoice">
+      <ion-accordion value="invoice.date">
+        <ion-item slot="header">
+          <ion-label>{{ invoice.date }}</ion-label>
+        </ion-item>
+    
+        <ion-list slot="content">
+          <ion-item *ngFor="let item of invoice.items">
+            <ion-label>{{ item.product}}</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-accordion>
+    </ion-accordion-group>
   </ion-list>
+
+<!---
+<ion-accordion-group value="numbers">
+  <ion-accordion value="colors">
+    <ion-item slot="header">
+      <ion-label>Colors</ion-label>
+    </ion-item>
+
+    <ion-list slot="content">
+      <ion-item>
+        <ion-label>Red</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Green</ion-label>
+      </ion-item>
+
+      </ion-list>
+    </ion-accordion>
+  </ion-accordion-group>
+-->
 </ion-content>
