--- a/Aplicacion/tienda-app/src/app/detail-client/detail-client.page.html
+++ b/Aplicacion/tienda-app/src/app/detail-client/detail-client.page.html
@@ -17,9 +17,12 @@
         <ion-list slot="content">
           <ion-item *ngFor="let item of invoice.items">
             <ion-label>{{ item.product}}</ion-label>
-            <!--  <ion-item *ngFor="let item of invoice.items"> 
+              <ion-item *ngFor="let item of invoice.items"> 
                 <ion-label>{{ item.quantity }}</ion-label>
-              </ion-item> -->
+              </ion-item>
+              <ion-item *ngFor="let item of invoice.items">
+                <ion-label>{{ item.total }}</ion-label>
+              </ion-item>
           </ion-item>
         </ion-list>
       </ion-accordion>
