Correciones en to es

--- a/Aplicacion/tienda-app/src/app/client/client.page.html
+++ b/Aplicacion/tienda-app/src/app/client/client.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
   <ion-list>
     <app-card-data *ngFor="let data of clientes" [data]="data"></app-card-data>
   </ion-list>
+</ion-content>
